[package]
name = "e4e-deduplicator"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.6", features = ["derive"]}
directories = "5.0"
indicatif = {version = "0.17.7", features = ["rayon"]}
md-5 = "0.10.6"
rayon = "1.8.0"
regex = "1.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
walkdir = "2.4.0"
